--- a/sherly_app/templates/pdf/pdf.html
+++ b/sherly_app/templates/pdf/pdf.html
@@ -36,17 +36,12 @@
             color: white;
         }
 
-        .center-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Set the height of the container to fill the viewport */
-        }
+       
         
 
         .cadre {
             border: 2px solid black; /* Define border properties */
-            padding: 20px; /* Add padding around the content */
+            padding: 10px; /* Add padding around the content */
         }
         .custom-table td[style*="width: 13%;"] {
             border-top: none;
@@ -77,9 +72,7 @@ body {
                 <table>
                     <tr>
                         <td style="width: 15%;" >
-
                             <img src="{{ logo_absolute_url }}" alt="" style="max-width: 100%; height: auto;">
-                          
                         </td>
                         <td style="width: 33%; text-align: left;" class="custom-background-color2"> <!-- Set text alignment to left -->
                             <div class="text-container">
@@ -206,7 +199,7 @@ body {
                         <table class="table">
                             <thead class="thead-dark custom-table-header">
                                 <tr>
-                                    <th scope="col">Référence</th>
+                                    <th scope="col">Réf</th>
                                     <th scope="col">Désignation</th>
                                     <th scope="col">Conditionnement</th>
                                     <th scope="col">Diamètre </th>
