--- a/sherly_app/templates/utilisateurs/liste_user.html
+++ b/sherly_app/templates/utilisateurs/liste_user.html
@@ -38,7 +38,7 @@
                                     <td>
                                       
                                         <a href="#" class="text-danger"><i class="bi bi-trash"></i></a>
-                                        <a href="#" class="text-warning"><i class="bi bi-pencil"></i></a>
+                                        <a href="{% url 'profile_user' user.id %}" class="text-warning"><i class="bi bi-pencil"></i></a>
                                     </td>
 
 
