--- a/sherly_app/templates/utilisateurs/liste_user.html
+++ b/sherly_app/templates/utilisateurs/liste_user.html
@@ -3,9 +3,33 @@
 {% block title %} BL app {% endblock %}
 
 {% block content %}
+<style>
+
+    /* Add these styles to your CSS */
+    input[type="checkbox"][disabled] {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        border: 2px solid;
+        border-radius: 4px;
+        cursor: not-allowed;
+    }
+
+    input[type="checkbox"][disabled]:checked {
+        background-color: green;
+        border-color: green; /* Adjust border color */
+    }
+
+    input[type="checkbox"][disabled]:not(:checked) {
+        background-color: red;
+        border-color: red; /* Adjust border color */
+    }
+    </style>
     <div class="container mt-4">
-        
-        
+
+
         <div class="container">
                                 {% if messages %}
                             <ul class="message-list">
@@ -23,21 +47,25 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>NOM D'UTILISATEUR</th> 
-                                <th>ACTION</th>
+                                <th style="text-align: center;">NOM D'UTILISATEUR</th>
+                                <th style="text-align: center;">ACTIF</th>
+                                <th style="text-align: center;">ACTION</th>
 
-                               
+
                             </tr>
                         </thead>
                         <tbody>
-                           
+
                             {% for user in users %}
-                                <tr>
+                                <tr style="text-align: center;">
                                     <td>{{user.username}}</td>
+                                    <td style="text-align: center;">
+                                        <input type="checkbox" disabled {% if user.is_active %}checked{% endif %}>
+                                    </td>
+
 
                                     <td>
-                                      
-                                        <a href="#" class="text-danger"><i class="bi bi-trash"></i></a>
+
                                         <a href="{% url 'profile_user' user.id %}" class="text-warning"><i class="bi bi-pencil"></i></a>
                                     </td>
 
