--- a/sherly_app/templates/base.html
+++ b/sherly_app/templates/base.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <title>{% block title %}Gestion des Crédits{% endblock %}</title>
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
-      
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f8f9fa;
@@ -135,7 +135,7 @@
         #sidebarCollapse:hover {
             color: #0fb300;
         }
-        
+
         .success {
             background-color: #4CAF50; /* Green background color */
             color: #fff; /* White text color */
@@ -147,7 +147,7 @@
     display: flex; /* Use flexbox */
     justify-content: center; /* Center horizontally */
     align-items: center;
- 
+
 }
 
 .avatar-img {
@@ -155,11 +155,11 @@
     width: 80px; /* Adjust the width as needed */
     height: 80px; /* Adjust the height as needed */
     object-fit: cover; /* Ensures the image covers the entire circle */
-    background-color: #320eb3;
+
 }
-    
+
     </style>
-    
+
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -171,7 +171,7 @@
             </button>
             <div class="sidebar-header">
                 {% if user.is_superuser %}
-                
+
                 <a href="{% url 'company' %}" class="avatar-link">
                     <img src="{{societe.logo.url}}" alt="Avatar" class="avatar-img">
                 </a>
@@ -202,20 +202,21 @@
                         <i class="fas fa-cube"></i> LISTE DES PRODUITS
                     </a>
                 </li>
-                
+
                 <li>
                     <a href="{% url 'commande_list' %}" title="COMMANDES">
                         <i class="fas fa-truck"></i> LISTE DES COMMANDES
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="FACTURES">
+
+                     <a href="{% url 'facture' %}" title="FACTURES">
                         <i class="fas fa-file-invoice-dollar"></i> FACTURES
                     </a>
                 </li>
                 <li>
                     <a href="{% url 'bl_logout' %}" title="Logout">
-                        <i class="fas fa-sign-out-alt"></i> Logout
+                        <i class="fas fa-sign-out-alt"></i> LOGOUT
                     </a>
                 </li>
             </ul>
@@ -228,7 +229,7 @@
                 </li>
                 <li>
                     <a href="{% url 'bl_logout' %}" title="Logout">
-                        <i class="fas fa-sign-out-alt"></i> Logout
+                        <i class="fas fa-sign-out-alt"></i> LOGOUT
                     </a>
                 </li>
             </ul>
@@ -237,13 +238,13 @@
 
         <!-- Page Content -->
         <div id="content">
-          
+
             <div class="container mt-4">
                 {% block content %}
-             
+
                 <div class="row">
                     <div class="col-md-12">
-                     
+
                     </div>
                 </div>
                 {% endblock %}
@@ -255,9 +256,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
+
     <!-- Custom JS for sidebar toggle -->
-    
+
 
     {% block extra_js %}{% endblock %}
 </body>
