--- a/sherly_app/templates/produits/ajouter.html
+++ b/sherly_app/templates/produits/ajouter.html
@@ -13,32 +13,34 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-    
-                        <!-- Bootstrap form styling -->
-                        <div class="form-group">
-                            <label > DÉSIGNATION</label>
-                            <input type="text" class="form-control" id="designation" name="designation" required oninput="this.value = this.value.toUpperCase()">
-                           
-                        </div>
-                        
-                        <div class="form-group">
-                            <label for="categorie1">FAMILLE </label>
+
+                                                <div class="form-group">
+                            <label for="categorie1">CATEGORIE </label>
                             <select class="form-control" id="famille" name="famille" required>
-                                <option value="" disabled selected>Choose</option>
+                                <option value="" disabled selected>CHOISIR</option>
                                 {% for value in familles %}
                                     <option value="{{ value.id }}">{{ value.famille }}</option>
                                 {% endfor %}
                             </select>
                         </div>
 
+                        <!-- Bootstrap form styling -->
+                        <div class="form-group">
+                            <label > DÉSIGNATION</label>
+                            <input type="text" class="form-control" id="designation" name="designation" required oninput="this.value = this.value.toUpperCase()">
+
+                        </div>
+
+
+
                         <div class="form-group">
                             <label>PRIX</label>
                             <input type="number" step="any" class="form-control" id="prix" name="prix"  required pattern="^[0-9]+(\.[0-9]+)?$">
                             {{ form.prix.errors }}
                         </div>
-    
-                        
-    
+
+
+
                         <div class="form-group">
                             <label >CONDITIONNEMENT:</label>
                             <input type="number" class="form-control" id="conditionnement" name="conditionnement"  required>
@@ -53,14 +55,14 @@
                                 </div>
                             </div>
                         </div>
-                       
 
-                        
-                        
+
+
+
                         <div class="text-center mt-3">
                             <button type="submit" class="btn btn-success">Valider</button>
                         </div>
-    
+
                     </form>
                 </div>
             </div>
