--- a/sherly_app/templates/utilisateurs/profile_user.html
+++ b/sherly_app/templates/utilisateurs/profile_user.html
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
 
-                       
+
 
                             <!-- Row 3 -->
                             <div class="form-row">
@@ -47,6 +47,15 @@
                                     {% if form.password2.errors %}
                                         <span class="text-danger">{{ form.password2.errors.0 }}</span>
                                     {% endif %}
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-1">
+                                    <label for="is_active">ACTIF</label>
+                                    <div class="input-group">
+                                        <input type="checkbox" class="form-control" id="is_active" name="is_active" {% if profile.is_active %}checked{% endif %}>
+                                    </div>
                                 </div>
                             </div>
 
